[gd_scene load_steps=59 format=3 uid="uid://ctkpfei25vhd4"]

[ext_resource type="Script" uid="uid://dr5a27ra4y5ll" path="res://Animal/player_one.gd" id="1_oi0yx"]
[ext_resource type="Texture2D" uid="uid://bd4baj72jb54t" path="res://Assets/icon.svg" id="2_chexb"]
[ext_resource type="Texture2D" uid="uid://dp8qd1mngerdh" path="res://Assets/Sprites/IMG_0690.jpg" id="2_mn4xn"]
[ext_resource type="AudioStream" uid="uid://c0iqnvgkyy3vq" path="res://Audio/bark.wav" id="3_qx3xb"]
[ext_resource type="AudioStream" uid="uid://d0b7p4iktdpaa" path="res://Audio/realjump.wav" id="4_0h8gg"]
[ext_resource type="Texture2D" uid="uid://b8omg07bnht3t" path="res://Assets/Sprites/Damage/damage1.png" id="5_4yms3"]
[ext_resource type="Texture2D" uid="uid://db5n3hjjlstew" path="res://Assets/Sprites/Idle/Base1_closed.png" id="5_qgtrj"]
[ext_resource type="Texture2D" uid="uid://0qfv17t0cdph" path="res://Assets/Sprites/Damage/damage2.png" id="6_x4kdc"]
[ext_resource type="Texture2D" uid="uid://5qsxlhr6uuph" path="res://Assets/Sprites/Fall/fall-2.png" id="8_5gifn"]
[ext_resource type="Texture2D" uid="uid://d2giy35xbex3k" path="res://Assets/Sprites/Fall/fall-3.png" id="9_l32ng"]
[ext_resource type="Texture2D" uid="uid://b42lckpdcpxdc" path="res://Assets/Sprites/Fall/fall-4.png" id="10_ud1f3"]
[ext_resource type="Texture2D" uid="uid://d0a1bqisvyl01" path="res://Assets/Sprites/Idle/Base1_open.png" id="12_4f4sr"]
[ext_resource type="Texture2D" uid="uid://c7kkqfwm50q4o" path="res://Assets/Sprites/Jump/jump-2.png" id="14_b2kcb"]
[ext_resource type="Texture2D" uid="uid://0wqywyeh7erp" path="res://Assets/Sprites/Jump/jump-3.png" id="15_n3370"]
[ext_resource type="Texture2D" uid="uid://br751u3wn27r5" path="res://Assets/Sprites/Jump/jump-4.png" id="16_n183g"]
[ext_resource type="Texture2D" uid="uid://dlbkxbjxqaaga" path="res://Assets/Sprites/Jump/jump-5.png" id="17_wmv5b"]
[ext_resource type="Texture2D" uid="uid://dx30s35vy6joh" path="res://Assets/Sprites/Jump/jump-6.png" id="18_3m8nl"]
[ext_resource type="Texture2D" uid="uid://yhflk18vffky" path="res://Assets/Sprites/Jump/jump-7.png" id="19_q2xmn"]
[ext_resource type="Texture2D" uid="uid://dvbpuqd6f2o4q" path="res://Assets/Sprites/Sitting/sit1.png" id="20_hyffb"]
[ext_resource type="Texture2D" uid="uid://b4owx2jw0eqju" path="res://Assets/Sprites/Sitting/sit2.png" id="21_bfn65"]
[ext_resource type="Texture2D" uid="uid://dde1jkfxhjqf0" path="res://Assets/Sprites/Sitting/sit_animatedpng.png" id="22_xmmct"]
[ext_resource type="Texture2D" uid="uid://dc0yjv7u0qw46" path="res://Assets/Sprites/Walk/walk1.png" id="23_865jl"]
[ext_resource type="Texture2D" uid="uid://cxs72cvnp37yf" path="res://Assets/Sprites/Walk/walk2.png" id="24_6rlec"]
[ext_resource type="Texture2D" uid="uid://byg2a8emo7lqa" path="res://Assets/Sprites/Walk/walk3.png" id="25_kmnvg"]
[ext_resource type="Texture2D" uid="uid://bcnqjhle3xklm" path="res://Assets/Sprites/Walk/walk4.png" id="26_didtd"]
[ext_resource type="Texture2D" uid="uid://by8yhf54cqjbu" path="res://Assets/Sprites/Walk/walk4_closed.png" id="27_gp5fa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oe7yg"]
radius = 13.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oi0yx"]
radius = 21.095

[sub_resource type="Curve" id="Curve_oi0yx"]
_data = [Vector2(0.0367647, 0.988764), 0.0, 0.0, 0, 0, Vector2(0.911765, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_chexb"]
curve = SubResource("Curve_oi0yx")

[sub_resource type="Gradient" id="Gradient_qx3xb"]
colors = PackedColorArray(0.827451, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0h8gg"]
gradient = SubResource("Gradient_qx3xb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oe7yg"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 4, 1)
gravity = Vector3(0, 50, 0)
color = Color(0.82881, 2.71939e-06, 5.77569e-07, 1)
color_ramp = SubResource("GradientTexture1D_0h8gg")
alpha_curve = SubResource("CurveTexture_chexb")

[sub_resource type="CircleShape2D" id="CircleShape2D_3pwu1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_chexb"]
radius = 1.0
height = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_chexb"]
radius = 37.054

[sub_resource type="AtlasTexture" id="AtlasTexture_ro3xd"]
atlas = ExtResource("5_4yms3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2uow"]
atlas = ExtResource("6_x4kdc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxjlb"]
atlas = ExtResource("8_5gifn")
region = Rect2(0, 0, 70, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i3qy"]
atlas = ExtResource("9_l32ng")
region = Rect2(0, 0, 70, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_68ytl"]
atlas = ExtResource("10_ud1f3")
region = Rect2(0, 0, 70, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmuud"]
atlas = ExtResource("5_qgtrj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuxd3"]
atlas = ExtResource("12_4f4sr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvk2r"]
atlas = ExtResource("14_b2kcb")
region = Rect2(0, 0, 76, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_2811n"]
atlas = ExtResource("15_n3370")
region = Rect2(0, 0, 76, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lsmk"]
atlas = ExtResource("16_n183g")
region = Rect2(0, 0, 76, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_igunv"]
atlas = ExtResource("17_wmv5b")
region = Rect2(0, 0, 76, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_47102"]
atlas = ExtResource("18_3m8nl")
region = Rect2(0, 0, 76, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7bph"]
atlas = ExtResource("19_q2xmn")
region = Rect2(0, 0, 76, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ecdl"]
atlas = ExtResource("20_hyffb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqx43"]
atlas = ExtResource("21_bfn65")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8yfk"]
atlas = ExtResource("22_xmmct")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_81i0k"]
atlas = ExtResource("23_865jl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlr6g"]
atlas = ExtResource("24_6rlec")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_js4p3"]
atlas = ExtResource("25_kmnvg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu5us"]
atlas = ExtResource("26_didtd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqdqf"]
atlas = ExtResource("27_gp5fa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0h8gg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro3xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2uow")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxjlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i3qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68ytl")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxjlb")
}],
"loop": false,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_wmuud")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yuxd3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvk2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2811n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lsmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igunv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47102")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7bph")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_47102")
}],
"loop": false,
"name": &"jumping",
"speed": 1.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_5ecdl")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_mqx43")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_v8yfk")
}],
"loop": true,
"name": &"sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81i0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlr6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js4p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu5us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqdqf")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="PlayerOne" type="CharacterBody2D" groups=["player"]]
z_index = 3
collision_layer = 65536
script = ExtResource("1_oi0yx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_oe7yg")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-2, 9)
shape = SubResource("CircleShape2D_oi0yx")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -2)
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_oe7yg")

[node name="Tail" type="Node2D" parent="."]
z_index = 2
position = Vector2(20, 13)
rotation = -1.5708

[node name="TailBase" type="StaticBody2D" parent="Tail"]
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Tail/TailBase"]
position = Vector2(4.00002, -4.99999)
rotation = 2.58309
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_mn4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailBase"]
position = Vector2(6.00001, -2.99998)
shape = SubResource("CircleShape2D_3pwu1")

[node name="PinJoint2D" type="PinJoint2D" parent="Tail"]
position = Vector2(8.00001, -3.99997)
node_a = NodePath("../TailBase")
node_b = NodePath("../TailBody")
motor_enabled = true
motor_target_velocity = 0.0174533

[node name="TailBody" type="RigidBody2D" parent="Tail"]
position = Vector2(0, -3)
collision_layer = 0
collision_mask = 0
mass = 0.25
gravity_scale = 0.5
inertia = 50.0

[node name="Sprite2D" type="Sprite2D" parent="Tail/TailBody"]
rotation = 3.14159
texture = ExtResource("2_mn4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailBody"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_chexb")

[node name="PinJoint2D2" type="PinJoint2D" parent="Tail"]
position = Vector2(-4, -3)
node_a = NodePath("../TailBody")
node_b = NodePath("../TailBody2")
motor_enabled = true
motor_target_velocity = 0.0174533

[node name="TailBody2" type="RigidBody2D" parent="Tail"]
position = Vector2(-9, -3)
collision_layer = 0
collision_mask = 0
mass = 0.25
gravity_scale = 0.5
inertia = 50.0

[node name="Sprite2D" type="Sprite2D" parent="Tail/TailBody2"]
rotation = 3.14159
texture = ExtResource("2_mn4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailBody2"]
shape = SubResource("CapsuleShape2D_chexb")

[node name="PinJoint2D3" type="PinJoint2D" parent="Tail"]
position = Vector2(-14, -3)
node_a = NodePath("../TailBody2")
node_b = NodePath("../TailBody3")
motor_enabled = true
motor_target_velocity = 0.0174533

[node name="TailBody3" type="RigidBody2D" parent="Tail"]
position = Vector2(-19, -3)
collision_layer = 0
collision_mask = 0
mass = 0.25
gravity_scale = 0.5
inertia = 50.0

[node name="Sprite2D" type="Sprite2D" parent="Tail/TailBody3"]
rotation = 3.14159
texture = ExtResource("2_mn4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailBody3"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_chexb")

[node name="PinJoint2D4" type="PinJoint2D" parent="Tail"]
position = Vector2(-23, -3)
node_a = NodePath("../TailBody3")
node_b = NodePath("../TailBody4")
motor_enabled = true
motor_target_velocity = 0.0174533

[node name="TailBody4" type="RigidBody2D" parent="Tail"]
position = Vector2(-27, -3)
collision_layer = 0
collision_mask = 0
mass = 0.25
gravity_scale = 0.5
inertia = 50.0

[node name="Sprite2D" type="Sprite2D" parent="Tail/TailBody4"]
rotation = 3.14159
texture = ExtResource("2_mn4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailBody4"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_chexb")

[node name="PinJoint2D5" type="PinJoint2D" parent="Tail"]
position = Vector2(-31, -3)
node_a = NodePath("../TailBody4")
node_b = NodePath("../TailBody5")
motor_enabled = true
motor_target_velocity = 0.0174533

[node name="TailBody5" type="RigidBody2D" parent="Tail"]
position = Vector2(-36, -3)
collision_layer = 0
collision_mask = 0
mass = 0.25
gravity_scale = 0.5
inertia = 50.0

[node name="Sprite2D" type="Sprite2D" parent="Tail/TailBody5"]
rotation = 3.14159
texture = ExtResource("2_mn4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailBody5"]
shape = SubResource("CapsuleShape2D_chexb")

[node name="PinJoint2D6" type="PinJoint2D" parent="Tail"]
position = Vector2(-40, -3)
node_a = NodePath("../TailBody5")
node_b = NodePath("../TailBody6")
motor_enabled = true
motor_target_velocity = 0.0174533

[node name="TailBody6" type="RigidBody2D" parent="Tail"]
position = Vector2(-45, -3)
collision_layer = 0
collision_mask = 0
mass = 0.25
gravity_scale = 0.5
inertia = 50.0

[node name="Sprite2D" type="Sprite2D" parent="Tail/TailBody6"]
rotation = 3.14159
texture = ExtResource("2_mn4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailBody6"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_chexb")

[node name="CarryArea" type="Area2D" parent="."]
position = Vector2(-2, 6)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarryArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_chexb")

[node name="InteractArea" type="Area2D" parent="."]
position = Vector2(-2, 6)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_chexb")

[node name="GrabPoint" type="PinJoint2D" parent="."]
node_a = NodePath("..")
softness = 5.0

[node name="Audio" type="Node2D" parent="."]

[node name="BarkSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("3_qx3xb")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("4_0h8gg")

[node name="Sprite" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite"]
z_index = 3
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_0h8gg")
animation = &"fall"

[node name="PointLight2D" type="PointLight2D" parent="Sprite/AnimatedSprite2D"]
visible = false
texture = ExtResource("2_chexb")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="animation_finished" from="Sprite/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
